# FCut

./: .gitignore  CHANGELOG.md  DevPrompt.MD  FCut.py  ideas  mdsilo.json  nuitka-crash-report.xml  pyproject.toml  test.html  開發指引prompt.MD
.github/workflows/: nuitka_build.yml
0_devprompt/: 20250523_改善建議.md  ACTION切換邏輯重大修復報告.md  ACTION切換驗證邏輯最終修復報告.md  DevPromtCode.MD  TaskSettings精簡重構完成報告.md  Vue_i18n_錯誤修復報告.md  Vue響應式系統修復完成報告.md  directory_structure.md  i18n_centralization_report.md  zhTW_structure_fix_report.md  前端開發指引.MD  功能實現總結.md  取消按鈕資料保存問題修復報告.md  問題修復總結.md  警告持續顯示問題最終修復報告.md  重構完成報告.md  開發指引prompt環境.MD
backend/: pyproject.toml
backend/fcut_backend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/backend/api/: api.py  main.py  ui_fastapi.py  windows_webview.py
src/backend/services/: ui_flask.py  ui_uvicorn.py  windows_webview.py
src/shared/: __init__.py  constants.py
src/shared/my_logger/: __init__.py  config.py  logger_module.py
src/ui/: REFACTOR_SUMMARY.md  index.html  package.json  pnpm-lock.yaml  snapshot.md  snapshot.ts  test.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/ui/src/: .eslintrc.js  App.vue  i18n.ts  main.ts  test-i18n-fix.html  vite-env.d.ts
src/ui/src/assets/: base.css
src/ui/src/components/: AppModals.vue  BaseModal.vue  MenuOptions.vue  MessageBar.vue  MousePositionDemo.vue  SettingControl.vue  SettingsPanel  ShiftKeyDemo.vue  TaskList.vue  TaskSettingsForm.vue  TopBar.vue
src/ui/src/locales/: en.ts  (+2 more)
src/ui/test/: 123.html  App_test.vue  index_test.html  regex_test.ts
ui/: package.json  pnpm-lock.yaml
(+57 files in other folders)
