[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fcut-backend"
version = "0.1.0"
description = "Backend for the FCut application"
requires-python = ">=3.9" # 根據您的 Python 版本 3.13.2，設定一個合理的最低版本
dependencies = [
    "pywebview",
]

[tool.uv]
# uv 相關設定 (如果需要)

[tool.setuptools]
packages = ["core", "api", "models"]